--- a/style.css
+++ b/style.css
@@ -30,6 +30,102 @@ body{
 
 .cabecalho-menu{
     display: flex;
-    
+    gap: 32px;
+}
+
+.cabecalho-menu-item {
+    font-family: 'Press Start 2P', cursive;
+    color: #fff2e7;
+    font-weight: 400;
+    font-size: 13px;
+}
+
+.conteudo {
+    margin-bottom: 48px;
+    border-top: 0.4px solid #fff2e7;
+}
+
+.conteudo-principal {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.conteudo-principal-escrito {
+    display: flex;
+    flex-direction: column;
+    gap: 32px; 
+}
+
+.conteudo-principal-tituo {
+    font-family: 'Press Start 2P', cursive;
+    color: #fff2e7;
+    font-weight: 400;
+    font-size: 55px;
+}
+
+.conteudo-principal-subttitulo {
+    font-family: 'Stoke', serif;
+    color: #ecd6c4;
+    font-weight: 400;
+    font-size: 24px;
+}
+
+.conteúdo-principal-escrito-botão {
+    background-color: #ecd6c4;
+    width: 180px;
+    height: 60px;
+    border: none;
+    box-shadow: 4px 5px 4px #161515 (0, 0, 0, 0.25);
+    border-radius: 20px;
+    font-family: 'Press Start 2P', cursive;
+    font-weight: 400;
+    font-size: 24;
+    color: #2f2325;
+}
+
+.conteúdo-principal-escrito-botão:hover {
+    background-color: rgba(236, 214, 196, 0.53);
+}
+
+
+.contudo-principal-imagem {
+    height: 430px;
+}
+
+.conteudo-principal-secundario {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+    margin-top: 48px;
+}
+
+.conteudo-principal-secundario-titulo {
+    border-top: 0.4px solid #fff2e7;
+    padding-top: 48px;
+    font-family: 'Righteous' cursive;
+    font-size: 24px;
+    color: #fff2e7;
+    margin-bottom: 16px;
+}
+
+.conteudo-principal-secundario-paragrafo {
+    font-family: 'Stoke', serif;
+    color: #fff2e7;
+    font-weight: 300;
+    font-size: 18px;
+}
+
+.rodape {
+    padding: 32px;
+    border-top: 00.4px solid #fff2e7;
+}
+
+.rodape-imagem {
+    height: 48px;
+    display: block;
+    margin: 0 auto;
 }
 
