--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 
 body{
     font-size: 100%;
-    background: linear-gradient(68.15deg, #141412 16.62%, #776f00 85.61%);
+    background: linear-gradient(68.15deg, #111111 16.62%, #6e4949 85.61%);
 }
 
 .cabecalho {
